--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "@emotion/react": "11.10.6",
     "@emotion/server": "11.10.0",
     "@emotion/styled": "11.10.6",
+    "@next/font": "^13.4.1",
+    "@usedapp/core": "^1.2.9",
+    "ethers": "^5.7.2",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
