--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
     "@emotion/styled": "11.10.6",
     "@next/font": "^13.4.1",
     "@usedapp/core": "^1.2.9",
+    "@xmtp/xmtp-js": "^8.2.0",
     "ethers": "^5.7.2",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "tslib": "^2.3.0"
   }
 }
